--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="fact-box" id="factText">
             console.log("Click the button to generate a programming fact!");
         </div>
-        <button onclick="generateFact()">Generate Fact</button>
+        <button onclick="generateFact()">Generate another Fun Fact</button>
     </div>
     <script src="script.js"></script>
 </body>
